# displayxr-mcp

./: .gitignore  CLAUDE.md  CMakeLists.txt  NOTICE  README.md  vcpkg.json
.claude/skills/dxr-release/: SKILL.md
.github/workflows/: build.yml
adapter/: displayxr_mcp.c  resource.rc  workspace_aggregator.c  workspace_aggregator.h
docs/: mcp-spec.md
include/displayxr_mcp/: mcp_allowlist.h  mcp_audit.h  mcp_capture.h  mcp_log_ring.h  mcp_server.h  mcp_transport.h  os_compat.h
installer/: DisplayXRMCPInstaller.nsi
installer/macos/: Distribution.xml  build_installer.sh  uninstall.sh
installer/macos/resources/: welcome.html
installer/macos/scripts/: postinstall
scripts/: sign-release.ps1
src/: mcp_allowlist.c  mcp_audit.c  mcp_capture.c  mcp_log_ring.c  mcp_server.c  mcp_transport.c  os_compat.c
tests/: smoke_test.c  v040_test.c
